--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<head>
 		<title>Hlee Xiong's CSD 340 Landing Page</title>
 		<link href="site.css" type="text/css" rel ="stylesheet"/>
+		<meta charset="UTF-8">
+		<link rel="stylesheet"
+         		 href="https://fonts.googleapis.com/css?family=Raleway">
 
 	</head>
 	<body>
@@ -20,6 +23,7 @@
 		<ul>
 			<li><a href="module-1/Xiong_Mod1_3.html">Assignment 1.3</a></li>
 			<li><a href="module-2/Xiong_Mod2_2.html">Assignment 2.2</a></li>
+			<li><a href="module-3/Xiong_Mod3_3.html">Assignment 3.3</a></li>
 		</ul>
 		
 		<h3>Projects</h3>
