--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 			<li><a href="module-3/Xiong_Mod3_3.html">Assignment 3.3</a></li>
 			<li><a href="module-4/Xiong_Mod4_2.html">Assignment 4.2</a></li>
 			<li><a href="module-6/Xiong_Mod6_2.html">Assignment 6.2</a></li>
+			<li><a href="module-8/Xiong_Mod8_2.html">Assignment 8.2</a></li>
 		</ul>
 		
 		<h3>Projects</h3>
 		
 		<ul>
-			<li><a href="">bioSite Project Home Page</a></li>
+			<li><a href="https://hleex.github.io/bioSite/" target="_blank">bioSite Project Home Page</a></li>
 		</ul>
 		
 		<h4>Important Links</h4>
