updating index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<li><a href="https://bruinconnect.bellevue.edu/" target="_blank">BRUIN Connect</a></li>
 		</ul>
 		
-		</div><!-- end containter -->
+		</div>
 	</body>
 		
 </html>
