--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><a href="module-6/Xiong_Mod6_2.html">Assignment 6.2</a></li>
 			<li><a href="module-8/Xiong_Mod8_2.html">Assignment 8.2</a></li>
 			<li><a href="module-9/Xiong_Mod9_3.html">Assignment 9.3</a></li>
+			<li><a href="module-11/Xiong_Mod11_2.html">Assignment 11.2</a></li>
 		</ul>
 		
 		<h3>Projects</h3>
