--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<li><a href="module-8/Xiong_Mod8_2.html">Assignment 8.2</a></li>
 			<li><a href="module-9/Xiong_Mod9_3.html">Assignment 9.3</a></li>
 			<li><a href="module-11/Xiong_Mod11_2.html">Assignment 11.2</a></li>
+			<li><a href="module-12/Xiong_Mod12_2.html">Assignment 12.2</a></li>
 		</ul>
 		
 		<h3>Projects</h3>
